# apps/front/src/api/model/index.ts
@@ -20,6 +20,7 @@ export * from "./getLibraryParams";
 export * from "./getLibraryScanParams";
 export * from "./getLibrarySeasonParams";
 export * from "./getLibraryShowParams";
+export * from "./getMediaDetailParams";
 export * from "./getMediaParams";
 export * from "./getMediaPlayParams";
 export * from "./getPlayerMediaParams";
@@ -42,10 +43,14 @@ export * from "./mediaAndWatchToken";
 export * from "./mediaDTO";
 export * from "./mediaWithStreams";
 export * from "./mediaWithStreamsStreamsItem";
+export * from "./playerSettingStream";
+export * from "./playerSettingStreamType";
 export * from "./playerSettings";
 export * from "./postAuthLogin201";
 export * from "./postPlayerEndParams";
+export * from "./postPlayerKeepaliveParams";
 export * from "./postPlayerSeekParams";
+export * from "./postShowScanParams";
 export * from "./queryEpisode";
 export * from "./queryLibrary";
 export * from "./queryMedia";
