# apps/front/src/api/model/playerSettingStream.ts
@@ -1,0 +1,12 @@
+/**
+ * Generated by otqs v1.0.0 🍺
+ * Do not edit manually.
+ * @beast/backend
+ * OpenAPI spec version: 0.0.1
+ */
+import type { PlayerSettingStreamType } from "./playerSettingStreamType";
+
+export interface PlayerSettingStream {
+  index: number;
+  type: PlayerSettingStreamType;
+}
