# apps/front/src/api/model/playerSettingStreamType.ts
@@ -1,0 +1,16 @@
+/**
+ * Generated by otqs v1.0.0 🍺
+ * Do not edit manually.
+ * @beast/backend
+ * OpenAPI spec version: 0.0.1
+ */
+
+export type PlayerSettingStreamType =
+  (typeof PlayerSettingStreamType)[keyof typeof PlayerSettingStreamType];
+
+// eslint-disable-next-line @typescript-eslint/no-redeclare
+export const PlayerSettingStreamType = {
+  video: "video",
+  audio: "audio",
+  subtitle: "subtitle",
+} as const;
